MOD/NEW: 1- Se añadieron ejecutables __init__.py en las carpetas src y pages para que python las pudiera reconocer como paquetes 2- Se realizaron cambios a la clase gestor para que pudiera adaptarse a los archivos que van a ser subidos en la pagina de streamlit 3- Se realizaron varias pruebas con el archivo pages en el que se probaron distintas funciones para extraer la información necesitada de cada archivo como las etiquetas, entre otros 4- Aun hacen falta algunos metodos en la clase gestor_csv aunque ya esta casi terminada para hacer uso de esta

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,14 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/macos
 
+# Fichero de paquetes de python para ignorar (datos en cache)
+
+__pycache__/
+
+# Archivo de pruebas testing.py sera ignorado porque es para mirar si funciona cada clase interna y cumple su funcion
+
+src/model/testing.py
+
 
 # more files to ignore
 
